# ats-resume

./: .dockerignore  README.md  create_test_data.py  main.py  pyproject.toml  pyrightconfig.json  reproduce_422.py  requirements.txt  test_api.py  test_api_pdf.py  test_local_api.py  test_resume.docx
src/: ai_feedback.py  cleaner.py  config.py  jd_parser.py  parser.py  scorer.py  semantic_matcher.py  skill_extractor.py
